--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,7 @@
 body{
 	margin:0;
 	padding:0;
-    background:#FFF;
+    background:#2C3041;
     overflow-x:hidden;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
