--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,34 +11,30 @@
 				<h3 class="mg-md">
 					Git
 				</h3>
-				<a href="index.html" class="a-btn a-block bloc-mob-center-text">Documentation</a>
-				<a href="index.html" class="a-btn a-block bloc-mob-center-text">How To</a>
-				<a href="index.html" class="a-btn a-block bloc-mob-center-text">Downloads</a>
-				<a href="index.html" class="a-btn a-block bloc-mob-center-text">Resources</a>
+				<a href="/documentation" class="a-btn a-block bloc-mob-center-text">Documentation</a>
+				<a href="/how-to" class="a-btn a-block bloc-mob-center-text">How To</a>
+				<a href="/downloads" class="a-btn a-block bloc-mob-center-text">Downloads</a>
+				<a href="/resources" class="a-btn a-block bloc-mob-center-text">Resources</a>
 			</div>
 			<div class="col-sm-3">
 				<h3 class="mg-md">
 					Resources <br>
 				</h3>
+				<a href="/resources/links" class="a-btn a-block bloc-mob-center-text">Links</a>
 				<a href="/resources/logo" class="a-btn a-block bloc-mob-center-text">Logos</a>
-				<a href="index.html" class="a-btn a-block bloc-mob-center-text">Education</a>
-				<a href="index.html" class="a-btn a-block bloc-mob-center-text">Videos</a>
+				<a href="/resources/videos" class="a-btn a-block bloc-mob-center-text">Videos</a>
 			</div>
 			<div class="col-sm-3">
 				<h3 class="mg-md">
 					DVCS<br>
 				</h3>
 				<a href="https://github.com/dvcs" class="a-btn a-block bloc-mob-center-text">GitHub</a>
-				<a href="index.html" class="a-btn a-block bloc-mob-center-text">Twitter</a>
-				<a href="index.html" class="a-btn a-block bloc-mob-center-text">Email</a>
 			</div>
 			<div class="col-sm-3">
 				<h3 class="mg-md">
 					About<br>
 				</h3>
 				<a href="/about/#support" class="a-btn a-block bloc-mob-center-text">Support DVCS</a>
-				<a href="index.html" class="a-btn a-block bloc-mob-center-text">Infrastructure</a>
-				<a href="index.html" class="a-btn a-block bloc-mob-center-text">Privacy</a>
 			</div>
 		</div>
 	</div>
