Updated typography based on blocs template

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,8 +2,8 @@
 {{ partial "navigation.html" . }}
 {{ $baseURL := .Site.BaseURL }}
 
-<!-- bloc-1 -->
-<div class="bloc l-bloc bgc-white " id="bloc-1">
+<!-- gitdvcs-404-->
+<div class="bloc l-bloc bgc-white " id="gitdvcs-404">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
@@ -12,6 +12,6 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-1 END -->
+<!-- gitdvcs-404 END -->
 
 {{ partial "footer.html" . }}
