--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,10 +7,10 @@
 	<div class="container bloc-xxl">
 		<div class="row">
 			<div class="col-sm-12">
-				<img src="img/git-logo.svg" class="img-responsive center-block" />
-				<h3 class="text-center mg-lg hero-bloc-text-sub">
+				<img src="/img/git-logo.svg" class="img-responsive center-block mg-md" />
+				<h1 class="text-center mg-lg hero-bloc-text-sub ">
 					Git is a distributed version control system
-				</h3>
+				</h1>
 			</div>
 		</div>
 		<div class="row voffset-lg">
@@ -27,9 +27,9 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1 class="text-center mg-md">
+				<h2 class="text-center mg-md  uppercase">
 					What Is Git?
-				</h1>
+				</h2>
 			</div>
 		</div>
 		<div class="row voffset">
@@ -48,15 +48,15 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1 class="mg-md text-center">
+				<h2 class="mg-md text-center  uppercase">
 					What Is On This Site?
-				</h1>
+				</h2>
 			</div>
 		</div>
 		<div class="row voffset">
 			<div class="col-sm-3">
 				<div class="text-center">
-					<span class="fa fa-book icon-xl what-is-on-icons"></span>
+					<span class="ion ion-ios-book-outline icon-xl what-is-on-icons"></span>
 				</div>
 				<div class="text-center">
 					<a href="/documentation/" class="a-btn large-links">Documentation</a>
@@ -67,7 +67,7 @@
 			</div>
 			<div class="col-sm-3">
 				<div class="text-center">
-					<span class="fa fa-question-circle-o icon-xl what-is-on-icons"></span>
+					<span class="ion ion-ios-help-outline icon-xl what-is-on-icons"></span>
 				</div>
 				<div class="text-center">
 					<a href="/how-to/" class="a-btn large-links">How To's</a>
@@ -78,7 +78,7 @@
 			</div>
 			<div class="col-sm-3">
 				<div class="text-center">
-					<span class="fa fa-cloud-download icon-xl what-is-on-icons"></span>
+					<span class="ion ion-ios-cloud-download-outline icon-xl what-is-on-icons"></span>
 				</div>
 				<div class="text-center">
 					<a href="/downloads/" class="a-btn large-links">Downloads</a>
@@ -89,7 +89,7 @@
 			</div>
 			<div class="col-sm-3">
 				<div class="text-center">
-					<span class="fa fa-link icon-xl what-is-on-icons"></span>
+					<span class="ion ion-ios-briefcase-outline icon-xl what-is-on-icons"></span>
 				</div>
 				<div class="text-center">
 					<a href="/resources/" class="a-btn large-links">Resources</a>
@@ -108,33 +108,30 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1 class="mg-md text-center">
+				<h2 class="mg-md text-center uppercase">
 					How Can I Help?
-				</h1>
+				</h2>
 			</div>
 		</div>
 		<div class="row voffset">
 			<div class="col-sm-12">
-				<h3 class="mg-md text-center">
+				<h4 class="mg-md text-center">
 					Open Source Software
-				</h3>
+				</h4>
 				<p>
 					This website is 100% open source. &nbsp;This means that anyone has access to the the code base and can make contributions. &nbsp;If you are interested in supporting dvcs, we have a lot of areas we need help with. &nbsp;You can visit our GitHub page, reivew issues and submit pull requests.
 				</p>
 			</div>
 		</div>
 		<div class="row voffset">
-			<div class="col-sm-3">
-				<img src="https://img.shields.io/github/stars/badges/shields.svg?style=social&label=Star" class="img-responsive center-block" />
+			<div class="col-sm-4">
+				<img src="https://img.shields.io/github/stars/dvcs/gitdvcs.com.svg?style=social&amp;label=Star" class="img-responsive center-block mg-md" />
 			</div>
-			<div class="col-sm-3">
-				<img src="https://img.shields.io/github/followers/espadrine.svg?style=social&label=Follow" class="img-responsive center-block" />
+			<div class="col-sm-4">
+				<img src="https://img.shields.io/github/forks/dvcs/gitdvcs.com.svg?style=social&amp;label=Fork" class="img-responsive center-block mg-md" />
 			</div>
-			<div class="col-sm-3">
-				<img src="https://img.shields.io/github/followers/espadrine.svg?style=social&label=Follow" class="img-responsive center-block" />
-			</div>
-			<div class="col-sm-3">
-				<img src="https://img.shields.io/github/forks/badges/shields.svg?style=social&label=Fork" class="img-responsive center-block" />
+			<div class="col-sm-4">
+				<img src="https://img.shields.io/github/watchers/dvcs/gitdvcs.com.svg?style=social&amp;label=Watch" class="img-responsive center-block mg-md" />
 			</div>
 		</div>
 	</div>
@@ -146,111 +143,79 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1 class="text-center mg-md">
+				<h2 class="text-center mg-md uppercase">
 					Who Is Using Git?
-				</h1>
+				</h2>
 			</div>
 		</div>
 		<div class="row voffset">
 			<div class="col-sm-12">
 				<h4 class="text-center mg-lg">
-					COMPANIES
+					Companies
 				</h4>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-sm-3">
-				<a href="https://github.com/apple">
-					<img src="/img/apple.svg" class="img-responsive center-block" />
-				</a>
+				<a href="https://github.com/apple"><img src="img/apple.svg" class="img-responsive center-block mg-md animated pulse-hvr" data-placement="bottom" data-toggle="tooltip" title="Apple" /></a>
 			</div>
 			<div class="col-sm-3">
-				<a href="https://github.com/facebook">
-				<img src="/img/facebook.svg" class="img-responsive center-block" />
-				</a>
+				<a href="https://github.com/facebook"><img src="img/facebook.svg" class="img-responsive center-block mg-md animated pulse-hvr" data-placement="bottom" data-toggle="tooltip" title="Facebook" /></a>
 			</div>
 			<div class="col-sm-3">
-				<a href="https://github.com/google">
-				<img src="/img/google.svg" class="img-responsive center-block" />
-				</a>
+				<a href="https://github.com/google"><img src="img/google.svg" class="img-responsive center-block mg-md animated pulse-hvr" data-placement="bottom" data-toggle="tooltip" title="Google" /></a>
 			</div>
 			<div class="col-sm-3">
-			<a href="https://github.com/linkedin">
-				<img src="/img/linkedin.svg" class="img-responsive center-block" />
-				</a>
+				<a href="https://github.com/linkedin"><img src="img/linkedin.svg" class="img-responsive center-block mg-md animated pulse-hvr" data-placement="bottom" data-toggle="tooltip" title="LinkedIn" /></a>
 			</div>
 		</div>
-		<div class="row voffset-md voffset">
+		<div class="row voffset-md voffset voffset-clear-xs">
 			<div class="col-sm-3">
-			<a href="https://github.com/microsoft">
-				<img src="/img/microsoft.svg" class="img-responsive center-block" />
-				</a>
+				<a href="https://github.com/microsoft"><img src="img/microsoft.svg" class="img-responsive center-block mg-md animated pulse-hvr" data-placement="bottom" data-toggle="tooltip" title="Microsoft" /></a>
 			</div>
 			<div class="col-sm-3">
-			<a href="https://github.com/netflix">
-				<img src="/img/netflix.svg" class="img-responsive center-block" />
-				</a>
+				<a href="https://github.com/netflix"><img src="img/netflix.svg" class="img-responsive center-block mg-md animated pulse-hvr" data-placement="bottom" data-toggle="tooltip" title="Netflix" /></a>
 			</div>
 			<div class="col-sm-3">
-			<a href="https://github.com/twitter">
-				<img src="/img/twitter.svg" class="img-responsive center-block" />
-				</a>
+				<a href="https://github.com/twitter"><img src="img/twitter.svg" class="img-responsive center-block mg-md animated pulse-hvr" data-placement="bottom" data-toggle="tooltip" title="Twitte" /></a>
 			</div>
 			<div class="col-sm-3">
-			<a href="https://github.com/uber">
-				<img src="/img/uber.svg" class="img-responsive center-block" />
-				</a>
+				<a href="https://github.com/uber"><img src="img/uber.svg" class="img-responsive center-block mg-md animated pulse-hvr" data-placement="bottom" data-toggle="tooltip" title="Uber" /></a>
 			</div>
 		</div>
 		<div class="row voffset">
 			<div class="col-sm-12">
 				<h4 class="text-center mg-lg">
-					PROJECTS<br>
+					Projects <br>
 				</h4>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-sm-3">
-			<a href="https://android-review.googlesource.com/#/q/status:open,n,z">
-				<img src="/img/android.svg" class="img-responsive center-block" />
-				</a>
+				<a href="https://android-review.googlesource.com/#/q/status:open,n,z"><img src="img/android.svg" class="img-responsive center-block mg-md animated pulse-hvr" data-placement="bottom" data-toggle="tooltip" title="Android" /></a>
 			</div>
 			<div class="col-sm-3">
-			<a href="https://git.eclipse.org/c/">
-				<img src="/img/eclipse.svg" class="img-responsive center-block" />
-				</a>
+				<a href="https://git.eclipse.org/c/"><img src="img/eclipse.svg" class="img-responsive center-block mg-md animated pulse-hvr" data-placement="bottom" data-toggle="tooltip" title="Eclipse" /></a>
 			</div>
 			<div class="col-sm-3">
-			<a href="https://git.gnome.org/browse/">
-				<img src="/img/gnome.svg" class="img-responsive center-block" />
-				</a>
+				<a href="https://git.gnome.org/browse/"><img src="img/gnome.svg" class="img-responsive center-block mg-md animated pulse-hvr" data-placement="bottom" data-toggle="tooltip" title="Gnome" /></a>
 			</div>
 			<div class="col-sm-3">
-			<a href="https://cgit.kde.org">
-				<img src="/img/kde.svg" class="img-responsive center-block" />
-				</a>
+				<a href="https://cgit.kde.org/"><img src="img/kde.svg" class="img-responsive center-block mg-md animated pulse-hvr" data-placement="bottom" data-toggle="tooltip" title="KDE" /></a>
 			</div>
 		</div>
-		<div class="row voffset-md voffset">
+		<div class="row voffset-md voffset voffset-clear-xs">
 			<div class="col-sm-3">
-			<a href="https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/">
-				<img src="/img/linux.svg" class="img-responsive center-block" />
-				</a>
+				<a href="https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/"><img src="img/linux.svg" class="img-responsive center-block mg-md animated pulse-hvr" data-placement="bottom" data-toggle="tooltip" title="Linux" /></a>
 			</div>
 			<div class="col-sm-3">
-			<a href="https://git.postgresql.org/gitweb/">
-				<img src="/img/postgres.svg" class="img-responsive center-block" />
-				</a>
+				<a href="https://git.postgresql.org/gitweb/"><img src="img/postgres.svg" class="img-responsive center-block mg-md animated pulse-hvr" data-placement="bottom" data-toggle="tooltip" title="PostgreSQL" /></a>
 			</div>
 			<div class="col-sm-3">
-			<a href="https://code.qt.io/cgit/">
-				<img src="/img/qt.svg" class="img-responsive center-block" />
-				</a>
+				<a href="https://code.qt.io/cgit/"><img src="img/qt.svg" class="img-responsive center-block mg-md animated pulse-hvr" data-placement="bottom" data-toggle="tooltip" title="Qt" /></a>
 			</div>
 			<div class="col-sm-3">
-			<a href="https://cgit.freedesktop.org/xorg/xserver/">
-				<img src="/img/xserver.svg" class="img-responsive center-block" />
-				</a>
+				<a href="https://cgit.freedesktop.org/xorg/xserver/"><img src="img/xserver.svg" class="img-responsive center-block mg-md animated pulse-hvr" data-placement="bottom" data-toggle="tooltip" title="XServer" /></a>
 			</div>
 		</div>
 	</div>
