--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,33 +8,24 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-3">
-				<h3 class="mg-md">
+				<h4 class="mg-md">
 					Git
-				</h3>
-				<a href="/documentation" class="a-btn a-block bloc-mob-center-text">Documentation</a>
-				<a href="/how-to" class="a-btn a-block bloc-mob-center-text">How To</a>
-				<a href="/downloads" class="a-btn a-block bloc-mob-center-text">Downloads</a>
-				<a href="/resources" class="a-btn a-block bloc-mob-center-text">Resources</a>
+				</h4><a href="/documentation/" class="a-btn a-block bloc-mob-center-text">Documentation</a><a href="/how-to/" class="a-btn a-block bloc-mob-center-text">How To</a><a href="/downloads/" class="a-btn a-block bloc-mob-center-text">Downloads</a><a href="/resources/" class="a-btn a-block bloc-mob-center-text">Resources</a>
 			</div>
 			<div class="col-sm-3">
-				<h3 class="mg-md">
+				<h4 class="mg-md">
 					Resources <br>
-				</h3>
-				<a href="/resources/links" class="a-btn a-block bloc-mob-center-text">Links</a>
-				<a href="/resources/logo" class="a-btn a-block bloc-mob-center-text">Logos</a>
-				<a href="/resources/videos" class="a-btn a-block bloc-mob-center-text">Videos</a>
+				</h4><a href="/resources/links/" class="a-btn a-block bloc-mob-center-text">Links</a><a href="/resources/logo/" class="a-btn a-block bloc-mob-center-text">Logo</a><a href="/resources/vidoes/" class="a-btn a-block bloc-mob-center-text">Videos</a>
 			</div>
 			<div class="col-sm-3">
-				<h3 class="mg-md">
+				<h4 class="mg-md">
 					DVCS<br>
-				</h3>
-				<a href="https://github.com/dvcs" class="a-btn a-block bloc-mob-center-text">GitHub</a>
+				</h4><a href="https://github.com/dvcs" class="a-btn a-block bloc-mob-center-text">GitHub</a>
 			</div>
 			<div class="col-sm-3">
-				<h3 class="mg-md">
+				<h4 class="mg-md">
 					About<br>
-				</h3>
-				<a href="/about/#support" class="a-btn a-block bloc-mob-center-text">Support DVCS</a>
+				</h4><a href="/about/#support" class="a-btn a-block bloc-mob-center-text">Support DVCS</a>
 			</div>
 		</div>
 	</div>
@@ -46,9 +37,9 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<a href="/" target="_blank"><img src="/img/git-logo-white.svg" class="img-responsive center-block mg-sm" height="38" width="38" /></a>
-				<p class="text-center">
-					<a href="https://www.github.com/dvcs">2017 DVCS</a>
+				<a href="https://www.gitdvcs.com"><img src="/img/git-logo-white.svg" class="img-responsive center-block mg-md" height="38" width="38" /></a>
+				<p class="text-center mg-lg">
+					<a href="https://github.com/dvcs">2017 DVCS</a><br>
 				</p>
 			</div>
 		</div>
