--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,8 +1,8 @@
 <!-- Main container -->
 <div class="page-container">
 
-	<!-- bloc-0 -->
-<div class="bloc sticky-nav bg-what-is-git bgc-white l-bloc" id="bloc-0">
+<!-- navigation-bar -->
+<div class="bloc sticky-nav bg-what-is-git bgc-white l-bloc" id="navigation-bar">
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
@@ -14,20 +14,20 @@
 			<div class="collapse navbar-collapse navbar-1">
 					<ul class="site-navigation nav navbar-nav navigation-links">
 						<li>
-							<a href="/documentation/" class="ltc-celestial-blue">Documentation</a>
+							<a href="/documentation/">Documentation</a>
 						</li>
 						<li>
-							<a href="/how-to/" class="ltc-celestial-blue">How To</a>
+							<a href="/how-to/">How To</a>
 						</li>
 						<li>
-							<a href="/downloads/" class="ltc-celestial-blue">Downloads</a>
+							<a href="/downloads/">Downloads</a>
 						</li>
 						<li>
-							<a href="/resources/" class="ltc-celestial-blue">Resources</a>
+							<a href="/resources/">Resources</a>
 						</li>
 					</ul>
 			</div>
 		</nav>
 	</div>
 </div>
-	<!-- bloc-0 END -->
+<!-- navigation-bar END -->
