--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,16 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="{{ .Keywords }}">
-    <meta name="description" content="{{ .Description }}">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-    <link rel="shortcut icon" type="image/png" href="/favicon.png">
-
+    <link rel="shortcut icon" type="image/png" href="favicon.ico">
+    
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/style.css">
-    <link rel="stylesheet" href="/css/animate.min.css">
-    <link rel="stylesheet" href="/css/font-awesome.min.css">
-
+    <link rel="stylesheet" href="/css/animate.min.css"><link rel="stylesheet" href="/css/font-awesome.min.css"><link rel="stylesheet" href="/css/ionicons.min.css"><link href='https://fonts.googleapis.com/css?family=Open+Sans:400&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Varela+Round&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    
     <script src="/js/jquery-2.1.0.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/blocs.min.js"></script>
