--- a/layouts/section/how-to.html
+++ b/layouts/section/how-to.html
@@ -8,7 +8,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-10">
-			<h1 id="title">{{ .Title }}</h1>
+			<h1 id="title">How To's</h1>
 				{{ partial "breadcrumbs.html" . }}
 				<ul class="list-unstyled">
 					{{ range .Data.Pages }}
