Fix absoluate urls, typo, and publish script

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,7 +15,7 @@
 			<div class="col-sm-3">
 				<h4 class="mg-md">
 					Resources <br>
-				</h4><a href="/resources/links/" class="a-btn a-block bloc-mob-center-text">Links</a><a href="/resources/logo/" class="a-btn a-block bloc-mob-center-text">Logo</a><a href="/resources/vidoes/" class="a-btn a-block bloc-mob-center-text">Videos</a>
+				</h4><a href="/resources/links/" class="a-btn a-block bloc-mob-center-text">Links</a><a href="/resources/logo/" class="a-btn a-block bloc-mob-center-text">Logo</a><a href="/resources/videos/" class="a-btn a-block bloc-mob-center-text">Videos</a>
 			</div>
 			<div class="col-sm-3">
 				<h4 class="mg-md">
