--- a/layouts/partials/breadcrumbs.html
+++ b/layouts/partials/breadcrumbs.html
@@ -7,7 +7,7 @@
 			{{ range $index, $element := split $url "/" }}
 			{{ $.Scratch.Add "path" $element }}
 			{{ if ne $element "" }}
-			<li><a href='/{{ $.Scratch.Get "path" }}'>{{ . }}</a></li>
+			<li><a href='{{ $.Scratch.Get "path" }}'>{{ . }}</a></li>
 			{{ $.Scratch.Add "path" "/" }}
 			{{ end }}
 			{{ end }}
