Only show ads in prod and add git link

--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -17,7 +17,7 @@
 				</ul>
 			</div>
 			<div class="col-sm-2">
-				{{ partial "carbon-vertical.html" . }}
+				{{ partial "carbon.html" . }}
 			</div>
 		</div>
 	</div>
