--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
 		</div>
 		<div class="row voffset-lg">
 			<div class="col-sm-12">
-				{{ partial "carbon-horizontal.html" . }}
+				{{ partial "carbon.html" . }}
 			</div>
 		</div>
 	</div>
