--- a/layouts/partials/carbon.html
+++ b/layouts/partials/carbon.html
@@ -1,3 +1,5 @@
+{{ if eq (printf "%#v" $.Site.BaseURL) "https://www.gitdvcs.com/" }}
 <center>
 <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=gitdvcscom" id="_carbonads_js"></script>
 </center>
+{{ end }}
