--- a/layouts/taxonomy/download.html
+++ b/layouts/taxonomy/download.html
@@ -77,7 +77,7 @@
 				{{ end }}
 			</div>
 			<div class="col-sm-2">
-							{{ partial "carbon-vertical.html" . }}
+							{{ partial "carbon.html" . }}
 			</div>
 		</div>
 	</div>
