--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -12,7 +12,7 @@
 				{{ .Content }}
 			</div>
 			<div class="col-sm-2">
-				{{ partial "carbon-vertical.html" . }}
+				{{ partial "carbon.html" . }}
 			</div>
 		</div>
 	</div>
