--- a/layouts/section/how-to.html
+++ b/layouts/section/how-to.html
@@ -19,7 +19,7 @@
 				</ul>
 			</div>
 			<div class="col-sm-2">
-				{{ partial "carbon-vertical.html" . }}
+				{{ partial "carbon.html" . }}
 			</div>
 		</div>
 	</div>
