--- a/layouts/section/resources.html
+++ b/layouts/section/resources.html
@@ -18,7 +18,7 @@
 				</ul>
 			</div>
 			<div class="col-sm-2">
-				{{ partial "carbon-vertical.html" . }}
+				{{ partial "carbon.html" . }}
 			</div>
 		</div>
 	</div>
