Only show ads in production

--- a/layouts/partials/carbon.html
+++ b/layouts/partials/carbon.html
@@ -1,6 +1,4 @@
-{{ printf "%#v" $.Site.BaseURL }}
-
-{{ if eq (printf "%#v" $.Site.BaseURL) "https://www.gitdvcs.com/" }}
+{{ if eq (printf "%v" $.Site.BaseURL) "https://www.gitdvcs.com/" }}
 <center>
 <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=gitdvcscom" id="_carbonads_js"></script>
 </center>
