Removed donation info

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -25,7 +25,7 @@
 			<div class="col-sm-3">
 				<h4 class="mg-md">
 					About<br>
-				</h4><a href="/about/#support" class="a-btn a-block bloc-mob-center-text">Support DVCS</a>
+				</h4><a href="/about/" class="a-btn a-block bloc-mob-center-text">About</a>
 			</div>
 		</div>
 	</div>
